# fithub-endless-runner

./: package-lock.json  package.json  websocket-server.js
EndlessRunnerUnity/: .gitignore
EndlessRunnerUnity/Assets/Materials/: Fishbone.mat
EndlessRunnerUnity/Assets/Models/: pumpkin.prefab
EndlessRunnerUnity/Assets/Prefabs/: Coin.prefab  CoinBKP.prefab  Entry.prefab  pumpkin Variant.prefab  pumpkin.prefab
EndlessRunnerUnity/Assets/Scenes/: Initial.unity  Leaderboard.unity  Main.unity
EndlessRunnerUnity/Assets/Scripts/: Player.cs  SimpleWebSocketManager.cs  UIManager.cs
EndlessRunnerUnity/Assets/Scripts/Network/: ExampleLeaderboardResponse.json  GameApiIntegration.cs  GameApiManager.cs  HttpClient.cs  MockApiManager.cs  README_HttpClient.md
EndlessRunnerUnity/Assets/Scripts/UI/: GameOverDebugHelper.cs  GameOverMenu.cs  GameOverUICreator.cs  LeaderboardEntryUI.cs  LeaderboardUI.cs  README_GameOver.md  README_Leaderboard.md  (+4 more)
EndlessRunnerUnity/Assets/Shaders/: CurvedRotation.shader
EndlessRunnerUnity/Assets/_Recovery/: 0.unity
EndlessRunnerUnity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
bodytracking/: .gitignore  README.md  pyproject.toml
bodytracking/bodytracking/: body.py  bodytracking_evaluation.py  global_vars.py  main.py  rendering.py  test_websocket_client.py  test_websocket_server.py  websocket_server.py
bodytracking/bodytracking/orbbec_utils/: utils.py
docs/: ServiceWorker.js  index.html
game/Assets/Scenes/: Initial.unity
game/Assets/Scripts/: SceneLoader.cs
simple-server/: app.py
simple_server/: app.py
(+4 files in other folders)
